--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile files('libs/WolframAlpha-1.1.jar')
-    compile files('libs/pocketsphinx-android-0.8-nolib.jar')
     compile 'me.palazzetti:adktoolkit:0.2.0'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
